--- a/03_01_DHCP.md
+++ b/03_01_DHCP.md
@@ -123,6 +123,7 @@ DHCP is used in most modern networks where devices frequently join or leave. Com
 - **Limited IP Range**: Insufficient IP pool size may prevent new devices from getting an address.
 
 ---
+![image](https://github.com/user-attachments/assets/52d9b5a3-d761-45f2-aeb5-6d0f8dfe2837)
 
 ## **Summary**
 
