--- a/03_01_DHCP.md
+++ b/03_01_DHCP.md
@@ -84,8 +84,7 @@ DHCP is used in most modern networks where devices frequently join or leave. Com
    - **DHCP Spoofing**: Rogue DHCP servers could give incorrect configurations.
    - **IP Address Conflicts**: Misconfigured DHCP servers might assign duplicate IP addresses.
 7. **DHCP Relay**: In large networks, DHCP Discover messages can be forwarded across subnets by a DHCP relay agent.
-8. **Fixed IP Assignment**: DHCP can reserve specific IPs for devices based on their MAC address, ensuring they always receive the same IP.
-
+8. **Fixed IP Assignment**: DHCP can reserve specific IPs for devices based on their MAC address, ensuring they always receive the same IP. When a device requests an IP address via DHCP, it sends its unique **MAC address** to the server. The DHCP server keeps a **lease history** that links each **MAC address** to a specific **IP address** it has assigned. When the device reconnects, it sends the same **MAC address**, and the server checks its lease history. If the previous IP is still available (lease not expired), the server will assign the same IP to the device. This ensures that the device gets a consistent IP address each time it connects to the network, as long as the lease is valid.
 ---
 
 ## **Protocols and Ports Used in DHCP**
